--- a/_data/links.yml
+++ b/_data/links.yml
@@ -401,7 +401,7 @@
   - title: "Give you driving directions"
     url: https://motherboard.vice.com/en_us/article/4x3pp9/the-simple-elegant-algorithm-that-makes-google-maps-possible    
   does:
-  - title: "Optimise charging for electric bike and scooter networks"
+  - title: "Optimise charging for bike and scooter networks"
     url: https://www.bikebiz.com/features/expanding-bike-share-with-artificial-intelligence
   - title: "Predict airline delays"
     url: https://techcrunch.com/2018/01/31/google-flights-will-now-predict-airline-delays-before-the-airlines-do/
